ajustes gerador de imagem