@@ -5,7 +5,7 @@ import java.util.Locale;
 
 public final class FormataMonetario {
 
-	private static final Locale PT_BR = Locale.of("pt", "BR");
+	private static final Locale PT_BR = new Locale("pt", "BR");
 
 	private FormataMonetario() {
 	}
